--- a/customer/templates/customer/footer.html
+++ b/customer/templates/customer/footer.html
@@ -1,53 +1,21 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>New Footer</title>
-  <style>
-    body{
-    padding: 0;
-    margin: 0;
-}
-    .footer{
-    position:fixed;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    display: flex;
-    justify-content: space-around;
-    background-color: #353b48;
-    padding: 0;
-}
-    .section{
-    padding: 0;
-    font-size: medium;
-    color: #dcdde1;
-}
-    p.section :hover{
-    color: #f5f6fa;
-    padding: 0;
-}
-    h1.zero{
-    font-family: 'Arial Black';
-    font-size: 2rem;
-    border-bottom: solid 2px white;
-}
-  </style>
-</head>
-<footer>
-    <div class="footer"> 
-        <div class="zero">
-            <h1>Logo</h1>
-            <h2>Copyright Footer Inc. &copy; 2021. All rights are reserved</h2>
+<link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.16/dist/tailwind.min.css" rel="stylesheet">
+<footer class="bg-yellow-100 text-center py-8 mt-12">
+    <div class="container mx-auto px-4">
+        <div class="mb-6">
+            <h2 id="copyright" class="text-sm text-gray-600">Copyright Footer Inc. &copy; 2021. All rights are reserved</h2>
         </div>
 
-        <div class="section  ">
-            <p>Contact Us</p>
-            <p>Visit Us</p>
-            <p>FAQ</p>
+        <div class="flex justify-center space-x-4">
+            <a href="#" class="text-gray-600 hover:text-red-600">Contact Us</a>
+            <a href="#" class="text-gray-600 hover:text-red-600">Visit Us</a>
+            <a href="#" class="text-gray-600 hover:text-red-600">FAQ</a>
         </div>
     </div>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script>
+        $(document).ready(function() {
+            var year = new Date().getFullYear();
+            $('#copyright').text('Copyright Footer Inc. © ' + year + '. All rights are reserved');
+        });
+        </script>
 </footer>
-</html>
