--- a/customer/templates/customer/navigation.html
+++ b/customer/templates/customer/navigation.html
@@ -1,23 +1,10 @@
-
-<nav class="navbar navbar-expand-lg navbar-dark brown">
-    <a class="navbar-brand" href="{% url 'index' %}">Deliver</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item">
-          <a class="nav-link" href="{% url 'about' %}">About Us</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="{% url 'menu' %}">Menu</a>
-        </li>
-      </ul>
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link" href="{% url 'order' %}">Place an Order!</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
-</div>
+<nav class="bg-yellow-100 font-bold text-red-600 px-6 py-4">
+  <div class="flex justify-between items-center">
+      <a href="{% url 'index' %}" class="text-2xl font-bold">Deliver</a>
+      <div class="space-x-4">
+          <a href="{% url 'about' %}" class=" hover:text-red-600">About Us</a>
+          <a href="{% url 'menu' %}" class=" hover:text-red-600">Menu</a>
+          <a href="{% url 'order' %}" class="hover:text-red-600">Place an Order!</a>
+      </div>
+  </div>
+</nav>
